removed overflow rule from video mixin. Fixes #1.

--- a/_src/partials/_mixins.scss
+++ b/_src/partials/_mixins.scss
@@ -357,7 +357,6 @@ $context: 960 !default;
     padding-bottom: $aspect;
     padding-top: 30px;
     height: 0;
-    overflow: hidden;
     iframe,  
     object,  
     embed {
